Add multitenancy related fixes to tests