@@ -44,7 +44,8 @@ public class DocumentTypesControllerTest extends BaseControllerTest {
 
         var mvcResponse = mockMvc.perform(post("/api/v1/auth/authenticate")
                 .content(objectMapper.writeValueAsString(request))
-                .contentType(MediaType.APPLICATION_JSON))
+                .contentType(MediaType.APPLICATION_JSON)
+                .header("X-TENANT-ID", "tenant_1"))
             .andExpect(status().isOk())
             .andReturn();
 
@@ -91,7 +92,8 @@ public class DocumentTypesControllerTest extends BaseControllerTest {
         return mockMvc.perform(post(url)
                 .header("Authorization", "Bearer " + token)
                 .content(request)
-                .contentType(MediaType.APPLICATION_JSON))
+                .contentType(MediaType.APPLICATION_JSON)
+                .header("X-TENANT-ID", "tenant_1"))
             .andExpect(status().isOk())
             .andReturn();
     }
@@ -106,7 +108,8 @@ public class DocumentTypesControllerTest extends BaseControllerTest {
     @SneakyThrows
     private void deleteRequest(String url, Long id, String token) {
         mockMvc.perform(delete(url + "/" + id)
-                .header("Authorization", "Bearer " + token))
+                .header("Authorization", "Bearer " + token)
+                .header("X-TENANT-ID", "tenant_1"))
             .andExpect(status().isNoContent());
     }
 
@@ -135,7 +138,7 @@ public class DocumentTypesControllerTest extends BaseControllerTest {
             "Проверка успешного создания типа документа админом",
             () -> assertThat(response.name()).isEqualTo("Test Document Type"),
             () -> assertThat(response.attributeResponses().size()).isEqualTo(1),
-            () -> assertThat(response.attributeResponses().get(0).attributeId()).isEqualTo(attributeId)
+            () -> assertThat(response.attributeResponses().getFirst().attributeId()).isEqualTo(attributeId)
         );
 
         deleteRequest(URL, response.id(), adminToken);
@@ -154,7 +157,8 @@ public class DocumentTypesControllerTest extends BaseControllerTest {
         mockMvc.perform(post(URL)
                 .header("Authorization", "Bearer " + userToken)
                 .content(objectMapper.writeValueAsString(request))
-                .contentType(MediaType.APPLICATION_JSON))
+                .contentType(MediaType.APPLICATION_JSON)
+                .header("X-TENANT-ID", "tenant_1"))
             .andExpect(status().isForbidden());
     }
 
@@ -170,7 +174,8 @@ public class DocumentTypesControllerTest extends BaseControllerTest {
         var mvcResponse = mockMvc.perform(put(URL + "/" + documentTypeId)
                 .header("Authorization", "Bearer " + adminToken)
                 .content(objectMapper.writeValueAsString(request))
-                .contentType(MediaType.APPLICATION_JSON))
+                .contentType(MediaType.APPLICATION_JSON)
+                .header("X-TENANT-ID", "tenant_1"))
             .andExpect(status().isOk())
             .andReturn();
 
@@ -180,7 +185,7 @@ public class DocumentTypesControllerTest extends BaseControllerTest {
             "Проверка успешного обновления типа документа админом",
             () -> assertThat(response.id()).isEqualTo(documentTypeId),
             () -> assertThat(response.name()).isEqualTo("Updated Document Type"),
-            () -> assertThat(response.attributeResponses().get(0).attributeId()).isEqualTo(attributeId)
+            () -> assertThat(response.attributeResponses().getFirst().attributeId()).isEqualTo(attributeId)
         );
     }
 
@@ -196,7 +201,8 @@ public class DocumentTypesControllerTest extends BaseControllerTest {
         mockMvc.perform(put(URL + "/" + documentTypeId)
                 .header("Authorization", "Bearer " + userToken)
                 .content(objectMapper.writeValueAsString(request))
-                .contentType(MediaType.APPLICATION_JSON))
+                .contentType(MediaType.APPLICATION_JSON)
+                .header("X-TENANT-ID", "tenant_1"))
             .andExpect(status().isForbidden());
     }
 
@@ -213,7 +219,8 @@ public class DocumentTypesControllerTest extends BaseControllerTest {
     @DisplayName("Юзер не может удалить тип документа")
     public void deleteDocumentTypeById_forbidden_user() {
         mockMvc.perform(delete(URL + "/" + documentTypeId)
-                .header("Authorization", "Bearer " + userToken))
+                .header("Authorization", "Bearer " + userToken)
+                .header("X-TENANT-ID", "tenant_1"))
             .andExpect(status().isForbidden());
     }
 
@@ -222,7 +229,8 @@ public class DocumentTypesControllerTest extends BaseControllerTest {
     @DisplayName("Юзер успешно получает тип документа по ID")
     public void getDocumentTypeById_success_admin() {
         var mvcResponse = mockMvc.perform(get(URL + "/" + documentTypeId)
-                .header("Authorization", "Bearer " + userToken))
+                .header("Authorization", "Bearer " + userToken)
+                .header("X-TENANT-ID", "tenant_1"))
             .andExpect(status().isOk())
             .andReturn();
 
@@ -232,7 +240,7 @@ public class DocumentTypesControllerTest extends BaseControllerTest {
             "Проверка получения типа документа по ID админом",
             () -> assertThat(response.id()).isEqualTo(documentTypeId),
             () -> assertThat(response.name()).isEqualTo(VALID_DOCUMENT_TYPE_NAME),
-            () -> assertThat(response.attributeResponses().get(0).attributeId()).isEqualTo(attributeId)
+            () -> assertThat(response.attributeResponses().getFirst().attributeId()).isEqualTo(attributeId)
         );
     }
 
@@ -241,11 +249,11 @@ public class DocumentTypesControllerTest extends BaseControllerTest {
     @DisplayName("Юзер успешно получает все типы документов")
     public void findAllDocumentTypes_success_admin() {
         var mvcResponse = mockMvc.perform(get(URL)
-                .header("Authorization", "Bearer " + userToken))
+                .header("Authorization", "Bearer " + userToken)
+                .header("X-TENANT-ID", "tenant_1"))
             .andExpect(status().isOk())
             .andReturn();
 
         assertThat(mvcResponse.getResponse().getStatus()).isEqualTo(200);
     }
-
 }
